import lunr.js from relative path

--- a/_includes/search-lunr.html
+++ b/_includes/search-lunr.html
@@ -1,4 +1,5 @@
-<script src="/js/lunr.js"></script>
+<!-- Note this is not a relative path so this only works from files generated in the root of the repo -->
+<script src="js/lunr.js"></script>
 
 <script>
 {% assign counter = 0 %}
