--- a/_includes/search-lunr.html
+++ b/_includes/search-lunr.html
@@ -1,5 +1,4 @@
-<!-- Note this is not a relative path so this only works from files generated in the root of the repo -->
-<script src="js/lunr.js"></script>
+<script src="{{ site.baseurl }}/js/lunr.js"></script>
 
 <script>
 {% assign counter = 0 %}
