--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
     {% seo %}
-    <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" type="text/css" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" type="text/css" href="{{ "/assets/css/dark-mode-override.css?v=" | append: site.github.build_revision | relative_url }}">
 </head>
 <body>
     {% include search-lunr.html %}
-
+    
     <div class="container-lg px-3 my-5 markdown-body">
         <div style='display:flex; justify-content: space-between; align-items: center; border-bottom: 1px solid #eaecef;'>
             {% if site.title and site.title != page.title %}
@@ -22,11 +23,11 @@
                 </form>
             </div>
         </div>
-
+        
         <div id="lunrsearchresults">
             <ul></ul>
         </div>
-
+        
         {{ content }}
         
         {% if site.github.private != true and site.github.license %}
